WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
114684
Fix the USE(3D_GRAPHICS) build with the standard OpenGL on Windows
https://bugs.webkit.org/show_bug.cgi?id=114684
Summary
Fix the USE(3D_GRAPHICS) build with the standard OpenGL on Windows
Jocelyn Turcotte
Reported
2013-04-16 06:26:28 PDT
Fix the USE(3D_GRAPHICS) build with the standard OpenGL on Windows
Attachments
Patch
(5.76 KB, patch)
2013-04-16 06:32 PDT
,
Jocelyn Turcotte
no flags
Details
Formatted Diff
Diff
Archive of layout-test-results from webkit-cq-02 for mac-mountainlion
(649.79 KB, application/zip)
2013-04-29 08:20 PDT
,
WebKit Commit Bot
no flags
Details
View All
Add attachment
proposed patch, testcase, etc.
Jocelyn Turcotte
Comment 1
2013-04-16 06:32:21 PDT
Created
attachment 198326
[details]
Patch
Simon Hausmann
Comment 2
2013-04-29 07:55:50 PDT
Comment on
attachment 198326
[details]
Patch rock
WebKit Commit Bot
Comment 3
2013-04-29 08:20:48 PDT
Comment on
attachment 198326
[details]
Patch Rejecting
attachment 198326
[details]
from commit-queue. New failing tests: transitions/mixed-type.html transitions/interrupted-accelerated-transition.html transitions/cubic-bezier-overflow-svg-length.html transitions/mismatched-shadow-styles.html transitions/cubic-bezier-overflow-transform.html transitions/flex-transitions.html transitions/mask-transitions.html http/tests/security/cookies/third-party-cookie-blocking-user-action.html transitions/negative-delay.html http/tests/security/mixedContent/redirect-https-to-http-iframe-in-main-frame.html transitions/background-transitions.html transitions/multiple-background-size-transitions.html transitions/multiple-shadow-transitions.html transitions/mismatched-shadow-transitions.html transitions/color-transition-premultiplied.html transitions/interrupt-zero-duration.html transitions/color-transition-all.html transitions/cubic-bezier-overflow-length.html transitions/multiple-mask-transitions.html transitions/multiple-background-transitions.html transitions/cancel-transition.html transitions/cubic-bezier-overflow-shadow.html transitions/cubic-bezier-overflow-color.html platform/mac/editing/deleting/deletionUI-single-instance.html transitions/color-transition-rounding.html transitions/border-radius-transition.html transitions/clip-transition.html fast/loader/javascript-url-in-object.html transitions/min-max-width-height-transitions.html Full output:
http://webkit-queues.appspot.com/results/244097
WebKit Commit Bot
Comment 4
2013-04-29 08:20:49 PDT
Created
attachment 200015
[details]
Archive of layout-test-results from webkit-cq-02 for mac-mountainlion The attached test failures were seen while running run-webkit-tests on the commit-queue. Bot: webkit-cq-02 Port: mac-mountainlion Platform: Mac OS X 10.8.3
WebKit Commit Bot
Comment 5
2013-04-30 01:22:09 PDT
Comment on
attachment 198326
[details]
Patch Clearing flags on attachment: 198326 Committed
r149355
: <
http://trac.webkit.org/changeset/149355
>
WebKit Commit Bot
Comment 6
2013-04-30 01:22:11 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug