Fix the USE(3D_GRAPHICS) build with the standard OpenGL on Windows https://bugs.webkit.org/show_bug.cgi?id=114684

Reviewed by Simon Hausmann.

Source/WebCore:

Currently USE(3D_GRAPHICS) is only supported with OpenGLES through ANGLE
on Windows. Allow building with the stock opengl32.lib on Windows by adding
missing glCompressedTex* entries in OpenGLShims.
Those are used in Source/WebCore/platform/graphics/opengl/GraphicsContext3DOpenGLCommon.cpp
and will be substituted by the preprocessor.

* platform/graphics/OpenGLShims.cpp:
(WebCore::initializeOpenGLShims):
* platform/graphics/OpenGLShims.h:
(_OpenGLFunctionTable):

Tools:

Remove the ANGLE requirement for USE(3D_GRAPHICS).
This enables WebKit2 in the build when using a "-opengl desktop" configured Qt.

* qmake/mkspecs/features/features.prf:


Canonical link: https://commits.webkit.org/133838@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@149355 268f45cc-cd09-0410-ab3c-d52691b4dbfc